--- a/debian/rules
+++ b/debian/rules
@@ -8,3 +8,8 @@ DEB_QMAKE_ARGS := RELEASE=0 PREFIXDIR=/usr
 install/igotu2gpx::
 	rm debian/igotu2gpx/usr/lib/*.so
 	rm debian/igotu2gpx/usr/share/doc/igotu2gpx/LICENSE
+
+$(patsubst %,binary-install/%,$(DEB_PACKAGES)) :: binary-install/%:
+	$(if $(wildcard /usr/bin/dh_desktop),dh_desktop -p$(cdbs_curpkg))
+	$(if $(wildcard /usr/bin/dh_icons),dh_icons -p$(cdbs_curpkg))
+
