Desktop file category changed to Utility instead of Graphics.

--- a/src/igotugui/igotugui.desktop
+++ b/src/igotugui/igotugui.desktop
@@ -6,4 +6,4 @@ StartupWMClass=igotugui
 Terminal=false
 Type=Application
 Icon=igotu2gpx-gui
-Categories=Qt;Graphics;Photography;
+Categories=Qt;Utility;Photography;
