--- a/debian/rules
+++ b/debian/rules
@@ -3,7 +3,7 @@
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/qmake.mk
 
-DEB_QMAKE_ARGS := RELEASE=0 PREFIXDIR=/usr CLEBS_DISABLED=libusb10connection
+DEB_QMAKE_ARGS := RELEASE=0 PREFIXDIR=/usr
 
 install/igotu2gpx::
 	rm debian/igotu2gpx/usr/lib/*.so
