--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: igotu2gpx
 Section: utils
 Priority: extra
 Maintainer: Michael Hofmann <mh21@piware.de>
-Build-Depends: cdbs, debhelper, libqt4-dev, libboost-dev,
+Build-Depends: cdbs, debhelper, pkg-config, libqt4-dev, libboost-dev,
  libboost-program-options-dev, libusb-1.0-0-dev | libusb-dev, libmarble-dev | libmarble-dev-kde4
 Standards-Version: 3.8.0
 Homepage: http://mh21.de/igotu2gpx/
