Legacy DKMS support for Hardy.

--- a/debian/dkms.conf
+++ b/debian/dkms.conf
@@ -1,3 +1,4 @@
 DEST_MODULE_LOCATION[0]="/kernel/drivers/usb/serial/"
 PACKAGE_NAME="igotu"
+BUILT_MODULE_NAME="igotu"
 PACKAGE_VERSION="xxxVERSIONxxx"
