Removed boost-po dependency, cleanup of exception names.

--- a/.bzrignore
+++ b/.bzrignore
@@ -21,24 +21,26 @@ object_script.*
 /tags-qt4
 /logs/
 
-src/igotuserial/*.ko
-src/igotuserial/*.mod.c
-src/igotuserial/Module.markers
-src/igotuserial/Module.symvers
-src/igotuserial/modules.order
-src/igotuserial/.*
+/src/igotuserial/*.ko
+/src/igotuserial/*.mod.c
+/src/igotuserial/Module.markers
+/src/igotuserial/Module.symvers
+/src/igotuserial/modules.order
+/src/igotuserial/.*
 
-translations/*.mo
-translations/*.ts
-translations/*.qm
+/translations/*.mo
+/translations/*.ts
+/translations/*.qm
 
-localconfig.pri
-localconfig.*.pri
+/localconfig.pri
+/localconfig.*.pri
 
-.output-background-make
+/.output-background-make
 
 /igotu2gpx.app/
 /igotu2gpx.dmg
 /igotu2gpx-*.dmg
 /igotu2gpx-*.tar.gz
 /igotu2gpx-*.zip
+
+/debian/tmp/
