ignore autogenerated stuff

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,26 @@
 *~
 translations/*.po
+.build/
+bin/
+tags
+trunk-packaging/debian/files
+trunk-packaging/debian/igotu2gpx.debhelper.log
+trunk-packaging/debian/igotu2gpx.postinst.debhelper
+trunk-packaging/debian/igotu2gpx.postrm.debhelper
+trunk-packaging/debian/igotu2gpx.preinst.debhelper
+trunk-packaging/debian/igotu2gpx.substvars
+trunk-packaging/debian/igotu2gpx/
+Makefile
+src/connections/libusb10connection/Makefile
+src/connections/libusbconnection/Makefile
+src/connections/serialconnection/Makefile
+src/exporters/detailsexporter/Makefile
+src/exporters/gpxexporter/Makefile
+src/exporters/kmlexporter/Makefile
+src/exporters/rawexporter/Makefile
+src/lib/igotu/Makefile
+src/programs/igotu2gpx/Makefile
+src/programs/igotugui/Makefile
+src/tests/Makefile
+src/visualizers/listvisualizer/Makefile
+src/visualizers/marblevisualizer/Makefile
