more Debian Stretch fixes to compile with QT5 marblewidget

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ src/programs/igotugui/Makefile
 src/tests/Makefile
 src/visualizers/listvisualizer/Makefile
 src/visualizers/marblevisualizer/Makefile
+.qmake.stash
