--- a/trunk-packaging/debian/rules
+++ b/trunk-packaging/debian/rules
@@ -4,7 +4,7 @@
 	dh $@
 
 override_dh_auto_configure:
-	dh_auto_configure -- RELEASE=1
+	QT_SELECT=qt5 dh_auto_configure -- RELEASE=1 QMAKE_CFLAGS_ISYSTEM=
 
 override_dh_installudev:
 	dh_installudev --priority=51
